# brief

./: .gitignore  README.md  generate_commands_index.py  io.github.shonebinu.Brief.json
data/: io.github.shonebinu.Brief.desktop.in  io.github.shonebinu.Brief.gschema.xml  io.github.shonebinu.Brief.metainfo.xml.in
po/: LINGUAS  POTFILES.in  pl.po
src/: brief.gresource.xml  main.py  meson.build  preferences.blp  preferences.py  renderer.blp  renderer.py  shortcuts-dialog.blp  sidebar.blp  sidebar.py  tldr.py  window.blp  window.py
